--- a/frontend/pages/books.html
+++ b/frontend/pages/books.html
@@ -446,14 +446,12 @@
                 <i class="fas fa-arrow-up"></i>
             </a>
         </footer>
-        <script src="./../Script/footer.js"></script>
 
-        
-        <script src="./../Script/books.js"></script>
-        <script src="./../Script/modal.js"> </script>
+        <!-- JavaScript Files -->
         <script src="./../Script/header.js"></script>
-    <script src="./../Script/theme.js"></script>
-
+        <script src="./../Script/footer.js"></script>
+        <script src="./../Script/books.js"></script>
+        <script src="./../Script/modal.js"></script>
+        <script src="./../Script/theme.js"></script>
     </body>
-
 </html>
