Activate search by book id

--- a/frontend/pages/admin_dashboard.html
+++ b/frontend/pages/admin_dashboard.html
@@ -95,7 +95,7 @@
         <section class="search-container">
             <form class="search-form">
                 <div class="search-box">
-                    <input type="search" class="search-input" placeholder="Search by title or author...">
+                    <input type="search" class="search-input" placeholder="Search by title, author or ID ...">
                     <!-- <button type="submit" class="search-btn"><i class="fas fa-search"></i></button> -->
                 </div>
 
