Add borrowers list, change input type of book id and some validation on it:

--- a/frontend/pages/add_edit.html
+++ b/frontend/pages/add_edit.html
@@ -86,7 +86,8 @@
                                     <i class="fa-solid fa-id-badge"></i>
                                     <label for="book-id">Book ID</label>
                                 </div>
-                                <input type="text" id="id" name="id"
+                                <input type="number" id="id" name="id"
+                                    oninput="this.value = this.value.replace(/[^0-9]/g, '');"
                                     placeholder="Enter Book ID"
                                     autocomplete="off"
                                     required>
