--- a/frontend/pages/admin_dashboard.html
+++ b/frontend/pages/admin_dashboard.html
@@ -58,7 +58,7 @@
             <h4>Are you sure to delete this book?</h4>
             <div class="book-details">
                 <div class="img-holder">
-                    <img src="./../CSS/assets/enceladus.jpg" alt="Book Cover" class="book-cover">
+                    <img src="./../CSS/assets/ChildOfTheKindred_ebook1.jpg" alt="Book Cover" class="book-cover">
                 </div>
                 <div class="info">
                     <label for="confirmation" class="id"></label>
@@ -73,6 +73,85 @@
         </div>
         <div class="loading hide">
             <i class="fa-solid fa-spinner"></i>
+        </div>
+        <div class="borrowers-list hide">
+            <span class="close-btn"><i class="fa-solid fa-xmark"></i></span>
+            <div class="book-details">
+                <div class="img-holder">
+                    <img src="./../CSS/assets/ChildOfTheKindred_ebook1.jpg" alt="Book Cover" class="book-cover">
+                </div>
+                <div class="info">
+                    <label for="borrowers-list" class="id"></label>
+                    <label for="borrowers-list" class="book-title"></label>
+                    <label for="borrowers-list" class="author"></label>
+                </div>
+            </div>
+            <div class="users">
+                <h4>Borrowers List</h4>
+                <div class="user">
+                    <div class="profile-pic-holder">
+                        <img src="./../CSS/assets/friend1.jpeg" alt="Profile Picture" class="profile-pic">
+                    </div>
+                    <div class="info">
+                        <p>Username: Ahmed</p>
+                        <p>Borrow Date: 10/10/2020</p>
+                    </div>
+                </div>
+                <div class="user">
+                    <div class="profile-pic-holder">
+                        <img src="./../CSS/assets/blue.avif" alt="Profile Picture" class="profile-pic">
+                    </div>
+                    <div class="info">
+                        <p>Username: Ahmed</p>
+                        <p>Borrow Date: 10/10/2020</p>
+                    </div>
+                </div>
+                <div class="user">
+                    <div class="profile-pic-holder">
+                        <img src="./../CSS/assets/blue.avif" alt="Profile Picture" class="profile-pic">
+                    </div>
+                    <div class="info">
+                        <p>Username: Ahmed</p>
+                        <p>Borrow Date: 10/10/2020</p>
+                    </div>
+                </div>
+                <div class="user">
+                    <div class="profile-pic-holder">
+                        <img src="./../CSS/assets/blue.avif" alt="Profile Picture" class="profile-pic">
+                    </div>
+                    <div class="info">
+                        <p>Username: Ahmed</p>
+                        <p>Borrow Date: 10/10/2020</p>
+                    </div>
+                </div>
+                <div class="user">
+                    <div class="profile-pic-holder">
+                        <img src="./../CSS/assets/blue.avif" alt="Profile Picture" class="profile-pic">
+                    </div>
+                    <div class="info">
+                        <p>Username: Ahmed</p>
+                        <p>Borrow Date: 10/10/2020</p>
+                    </div>
+                </div>
+                <div class="user">
+                    <div class="profile-pic-holder">
+                        <img src="./../CSS/assets/blue.avif" alt="Profile Picture" class="profile-pic">
+                    </div>
+                    <div class="info">
+                        <p>Username: Ahmed</p>
+                        <p>Borrow Date: 10/10/2020</p>
+                    </div>
+                </div>
+                <div class="user">
+                    <div class="profile-pic-holder">
+                        <img src="./../CSS/assets/blue.avif" alt="Profile Picture" class="profile-pic">
+                    </div>
+                    <div class="info">
+                        <p>Username: Ahmed</p>
+                        <p>Borrow Date: 10/10/2020</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
