--- a/frontend/pages/user_dashboard.html
+++ b/frontend/pages/user_dashboard.html
@@ -249,7 +249,7 @@
         </footer>
         <div id="book-modal" class="modal hidden">
             <div class="modal-content">
-                <span class="close-btn">&times;</span>
+                <span class="close-btn"><i class="fa-solid fa-xmark"></i></span>
                 <div class="modal-grid">
                     <div class="modal-image-section">
                         <img id="modal-image" src="" alt="Book Cover" />
