Fix some bugs in edit

--- a/frontend/pages/add_edit.html
+++ b/frontend/pages/add_edit.html
@@ -148,10 +148,10 @@
                             <div class="field">
                                 <div class="input-header">
                                     <i class="fa-regular fa-calendar"></i>
-                                    <label for="pub-time">Year of
+                                    <label for="pub-year">Year of
                                         Publication</label>
                                 </div>
-                                <input type="number" id="pub-time"
+                                <input type="number" id="pub-year"
                                     placeholder="2025"
                                     name="year-of-publication" min="1900"
                                     max="2025" required>
