--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -21,7 +21,8 @@
           </div>
           <nav>
             <ul class="nav-bar">
-              <li><a href="#" id="homeLink"><i class="fas fa-home"></i> Home</a></li>              <li><a href="./books.html"><i class="fas fa-book"></i> Books</a></li>
+              <li><a href="#" id="homeLink"><i class="fas fa-home"></i> Home</a></li>
+              <li><a href="./books.html"><i class="fas fa-book"></i> Books</a></li>
               <li><a href="./profile.html" class="active"><i class="fas fa-user"></i> Profile</a></li>
               <li><a href="./../../index.html"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
             </ul>
@@ -214,14 +215,12 @@
                   <label for="currentPassword">Current Password</label>
                   <div class="password-input">
                     <input id="currentPassword" type="password" placeholder="Enter current password" />
-                    <i class="fas fa-eye toggle-password" onclick="togglePasswordVisibility('currentPassword', this)"></i>
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="newPassword">New Password</label>
                   <div class="password-input">
                     <input id="newPassword" type="password" placeholder="Enter new password" />
-                    <i class="fas fa-eye toggle-password" onclick="togglePasswordVisibility('currentPassword', this)"></i>
                   </div>
                   <div class="password-strength">
                     <span class="strength-bar"></span>
@@ -258,7 +257,6 @@
                   <label for="deletePassword">Enter your password to confirm:</label>
                   <div class="password-input">
                     <input id="deletePassword" type="password" placeholder="Enter your password" />
-                    <i class="fas fa-eye toggle-password" onclick="togglePasswordVisibility('deletePassword')"></i>
                   </div>
                 </div>
                 <div class="modal-buttons">
@@ -289,9 +287,9 @@
             <div class="footer-section">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="./../../index.html">Home</a></li>
-                    <li><a href="./books.html">Books</a></li>
-                    <li><a href="#features">Features</a></li>
+                  <li><a href="#" id="homeLink"> Home</a></li>
+                  <li><a id="bookLink" href="#">Books</a></li>
+                  <li><a href="./../../index.html">Log out</a></li>
                 </ul>
             </div>
             <div class="footer-section">
