--- a/frontend/pages/user_dashboard.html
+++ b/frontend/pages/user_dashboard.html
@@ -26,7 +26,7 @@
                                 Home</a></li>
                         <li><a href="./../pages/books.html"><i
                                     class="fas fa-book"></i> Books</a></li>
-                        <li><a href="./../../index.html#features"><i
+                        <li><a href="./../../index.html"><i
                                     class="fas fa-sign-out-alt"></i> Log
                                 Out</a></li>
                     </ul>
