--- a/frontend/pages/borrowed.html
+++ b/frontend/pages/borrowed.html
@@ -31,18 +31,18 @@
                 </div>
                 <nav>
                     <ul class="nav-bar">
-                        <li><a href="../../index.html"><i
+                        <li><a href="./user_dashboard.html"><i
                                     class="fas fa-home"></i> Home</a></li>
                         <li><a href="./books.html"><i class="fas fa-book"></i>
                                 Books</a></li>
                         <li><a href="./borrowed.html" class="active"><i
                                     class="fas fa-bookmark"></i> My
                                 Borrows</a></li>
-                        <li><a href="./user_dashboard.html"><i
+                        <li><a href="./profile.html"><i
                                     class="fas fa-user"></i> Account</a></li>
                         <li><a href="#contact"><i class="fas fa-envelope"></i>
                                 Contact</a></li>
-                        <li><a href="../../index.html"><i
+                        <li><a href="../../../index.html"><i
                                     class="fas fa-sign-out-alt"></i>
                                 Logout</a></li>
                     </ul>
@@ -481,7 +481,7 @@
                 <div class="footer-section">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="../../index.html">Home</a></li>
+                        <li><a href="./user_dashboard.html">Home</a></li>
                         <li><a href="./books.html">Books</a></li>
                         <li><a href="./borrowed.html">My Borrows</a></li>
                     </ul>
