Borrow and borrowers list

--- a/frontend/pages/admin_dashboard.html
+++ b/frontend/pages/admin_dashboard.html
@@ -88,68 +88,8 @@
             </div>
             <div class="users">
                 <h4>Borrowers List</h4>
-                <div class="user">
-                    <div class="profile-pic-holder">
-                        <img src="./../CSS/assets/friend1.jpeg" alt="Profile Picture" class="profile-pic">
-                    </div>
-                    <div class="info">
-                        <p>Username: Ahmed</p>
-                        <p>Borrow Date: 10/10/2020</p>
-                    </div>
-                </div>
-                <div class="user">
-                    <div class="profile-pic-holder">
-                        <img src="./../CSS/assets/blue.avif" alt="Profile Picture" class="profile-pic">
-                    </div>
-                    <div class="info">
-                        <p>Username: Ahmed</p>
-                        <p>Borrow Date: 10/10/2020</p>
-                    </div>
-                </div>
-                <div class="user">
-                    <div class="profile-pic-holder">
-                        <img src="./../CSS/assets/blue.avif" alt="Profile Picture" class="profile-pic">
-                    </div>
-                    <div class="info">
-                        <p>Username: Ahmed</p>
-                        <p>Borrow Date: 10/10/2020</p>
-                    </div>
-                </div>
-                <div class="user">
-                    <div class="profile-pic-holder">
-                        <img src="./../CSS/assets/blue.avif" alt="Profile Picture" class="profile-pic">
-                    </div>
-                    <div class="info">
-                        <p>Username: Ahmed</p>
-                        <p>Borrow Date: 10/10/2020</p>
-                    </div>
-                </div>
-                <div class="user">
-                    <div class="profile-pic-holder">
-                        <img src="./../CSS/assets/blue.avif" alt="Profile Picture" class="profile-pic">
-                    </div>
-                    <div class="info">
-                        <p>Username: Ahmed</p>
-                        <p>Borrow Date: 10/10/2020</p>
-                    </div>
-                </div>
-                <div class="user">
-                    <div class="profile-pic-holder">
-                        <img src="./../CSS/assets/blue.avif" alt="Profile Picture" class="profile-pic">
-                    </div>
-                    <div class="info">
-                        <p>Username: Ahmed</p>
-                        <p>Borrow Date: 10/10/2020</p>
-                    </div>
-                </div>
-                <div class="user">
-                    <div class="profile-pic-holder">
-                        <img src="./../CSS/assets/blue.avif" alt="Profile Picture" class="profile-pic">
-                    </div>
-                    <div class="info">
-                        <p>Username: Ahmed</p>
-                        <p>Borrow Date: 10/10/2020</p>
-                    </div>
+                <div class="no-users hide">
+                    <h3>No users found!</h3>
                 </div>
             </div>
         </div>
