--- a/frontend/pages/books.html
+++ b/frontend/pages/books.html
@@ -126,6 +126,11 @@
                 </form>
             </section>
 
+            <div class="alert hide">
+                <p>Already Borrowed</p>
+                <img src="./../CSS/assets/alert.gif" alt="Alert icon">
+            </div>
+
             <section class="featured-section">
                 <h2 class="featured-title">Featured Books</h2>
                 <div class="book-grid">
@@ -150,9 +155,9 @@
                 <div class="footer-section">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="#books">Books</a></li>
-                        <li><a href="#features">features</a></li>
+                        <li><a href="./books.html">Home</a></li>
+                        <li><a href="./books.html">Books</a></li>
+                        <li><a href="./../../index.html#features">features</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
