Add notification when borrow

--- a/frontend/pages/books.html
+++ b/frontend/pages/books.html
@@ -126,6 +126,11 @@
                 </form>
             </section>
 
+            <div class="borrowed hide">
+                <p>Borrowed Successfully</p>
+                <img src="./../CSS/assets/add.gif" alt="saved icon">
+            </div>
+
             <div class="alert hide">
                 <p>Already Borrowed</p>
                 <img src="./../CSS/assets/alert.gif" alt="Alert icon">
