Update index.html for redeploy

--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#books">Books</a></li>
             <li><a href="#features">features</a></li>
-            <li><a href="./frontend/pages/add_edit.html">add edit</a></li>
-            <li><a href="./frontend/pages/admin_dashboard.html">admin board</a></li>
-            <li><a href="./frontend/pages/user_dashboard.html">User dash board</a></li>
-            <li><a href="./frontend/pages/book_details.html">book details</a></li>
-            <li><a href="./frontend/pages/borrowed.html">borrow page</a></li>
-            <li><a href="./frontend/pages/admin_dashboard.html">admin board</a></li>
-            <li><a href="./frontend/pages/profile.html">profile</a></li>
+<!--             <li><a href="./frontend/pages/add_edit.html">add edit</a></li> -->
+<!--             <li><a href="./frontend/pages/admin_dashboard.html">admin board</a></li> -->
+<!--             <li><a href="./frontend/pages/user_dashboard.html">User dash board</a></li> -->
+<!--             <li><a href="./frontend/pages/book_details.html">book details</a></li> -->
+<!--             <li><a href="./frontend/pages/borrowed.html">borrow page</a></li> -->
+<!--             <li><a href="./frontend/pages/admin_dashboard.html">admin board</a></li> -->
+<!--             <li><a href="./frontend/pages/profile.html">profile</a></li> -->
                   
           </ul>
         </div>
