add validation for the passwords in the model in the profile.js

--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -307,6 +307,7 @@
         </a>
     </footer>
     <link rel="stylesheet" href="./../CSS/theme.css">
+    <script src="./../Script/sign"></script>
     <script src="./../Script/theme.js" defer></script>
     <script src="../Script/footer.js"></script>
     <script src="../Script/profile.js"></script>
