--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -99,13 +99,13 @@
               <a href="borrowed.html" class="profile-link">
                 <i class="fas fa-book-open"></i> My Borrowed Books
               </a>
-              <a href="./borrowed.html#favorites" class="profile-link">
+              <a href="favorites.html" class="profile-link">
                 <i class="fas fa-heart"></i> My Favorites
               </a>
-              <a href="#" class="profile-link">
+              <a href="reading-history.html" class="profile-link">
                 <i class="fas fa-history"></i> Reading History
               </a>
-              <a href="#" class="profile-link">
+              <a href="reviews.html" class="profile-link">
                 <i class="fas fa-comment"></i> My Reviews
               </a>
             </div>
