--- a/frontend/pages/books.html
+++ b/frontend/pages/books.html
@@ -8,8 +8,6 @@
         <link rel="stylesheet" href="../CSS/footer.css">
         <link rel="stylesheet" href="../CSS/index.css">
         <link rel="stylesheet" href="../CSS/books.css">
-        <link rel="stylesheet" href="../CSS/modal.css">
-
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,10 +30,12 @@
                 </div>
                 <nav>
                     <ul class="nav-bar">
-                        <li><a href="#hero"><i
+                        <li><a href="./user_dashboard.html"><i
                                     class="fas fa-home"></i> Home</a></li>
+                        <li><a href="./profile.html"><i
+                                    class="fas fa-user"></i> Profile</a></li>
                         <li><a href="./books.html" class="active"><i
-                                    class="fas fa-book"></i> Books</a></li>
+                                    class="fas fa-book"></i> Books</a></li>        
                         <li><a href="./../../index.html#features"><i
                                     class="fas fa-sign-out-alt"></i> Log
                                 Out</a></li>
