fix the profile links - last thing in this profile page i think

--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -96,17 +96,11 @@
             </div>
             
             <div class="profile-links">
-              <a href="borrowed.html" class="profile-link">
+              <a href="./borrowed.html" id="AdminHidden" class="profile-link">
                 <i class="fas fa-book-open"></i> My Borrowed Books
               </a>
-              <a href="favorites.html" class="profile-link">
+              <a href="./borrowed.html#favorites" id="AdminHidden" class="profile-link">
                 <i class="fas fa-heart"></i> My Favorites
-              </a>
-              <a href="reading-history.html" class="profile-link">
-                <i class="fas fa-history"></i> Reading History
-              </a>
-              <a href="reviews.html" class="profile-link">
-                <i class="fas fa-comment"></i> My Reviews
               </a>
             </div>
           </div>
