Handle borrowers list when edit username and profile pic

--- a/frontend/pages/books.html
+++ b/frontend/pages/books.html
@@ -183,5 +183,6 @@
         <script src="../Script/books.js"></script>
         <script src="../Script/header.js"></script>
         <script src="../Script/footer.js"></script>
+        <script src="../Script/theme.js"></script>
     </body>
 </html>
